some local change

--- a/energy_webpage/tv.html
+++ b/energy_webpage/tv.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Energy Smart Appliances</title>
+    <title>Energy Smart Appliances - Televisions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,23 +16,23 @@
 
         <nav>
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="tv.html">Televisions</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="tv.html">Televisions</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="home" class="page">
-            <h1>Welcome to Energy Smart Appliances</h1>
+        <section id="tv" class="page">
+            <h1>Televisions & Energy Consumption</h1>
             <p>
-                Australian households are increasingly focused on reducing energy
-                consumption to lower electricity costs and environmental impact.
+                Televisions can contribute significantly to household energy usage,
+                especially when used for long periods each day.
             </p>
             <p>
-                Choosing energy-efficient appliances helps reduce electricity bills
-                and carbon emissions.
+                Modern LED and OLED televisions are more energy efficient than
+                older plasma models.
             </p>
         </section>
     </main>
@@ -45,6 +45,5 @@
 
     <script src="script.js"></script>
 </body>
-
 
 </html>
