--- a/energy_webpage/about.html
+++ b/energy_webpage/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Energy Smart Appliances</title>
+    <title>Energy Smart Appliances - About Us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,23 +16,23 @@
 
         <nav>
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="tv.html">Televisions</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="home" class="page">
-            <h1>Welcome to Energy Smart Appliances</h1>
+        <section id="about" class="page">
+            <h1>About Us</h1>
             <p>
-                Australian households are increasingly focused on reducing energy
-                consumption to lower electricity costs and environmental impact.
+                We provide information about appliance energy consumption in the
+                Australian market.
             </p>
             <p>
-                Choosing energy-efficient appliances helps reduce electricity bills
-                and carbon emissions.
+                Our mission is to help consumers make informed, energy-efficient
+                choices.
             </p>
         </section>
     </main>
@@ -45,6 +45,5 @@
 
     <script src="script.js"></script>
 </body>
-
 
 </html>
