Add TV article content, images, and figure styles
Add three chart images and expand tv.html with a full article and embedded figures (unique model count, screen size vs power, and screen tech vs power). Update styles.css to close the footer rule and add figure/figcaption styling for centered images and captions. This enhances the TV energy-consumption page with narrative, visuals, and improved layout.

--- a/Exercise 3/tv.html
+++ b/Exercise 3/tv.html
@@ -25,14 +25,95 @@
 
     <main>
         <section id="tv" class="page">
-            <h1>Televisions & Energy Consumption</h1>
+            <h1>The True Cost of Screen Size: Process Behind the Pixel</h1>
             <p>
-                Televisions can contribute significantly to household energy usage,
-                especially when used for long periods each day.
+                Imagine standing in the aisle of a massive electronics store. Wall-to-wall screens flicker with vibrant
+                colors, each vying for your attention.
+                For the average Australian homeowner, this choice is often paralyzed by technical jargon: 4K, 8K, OLED,
+                QLED.
+                But beyond the glossy marketing, a silent cost accumulates in every frame: <strong>power
+                    consumption</strong>.
+                Our deep dive into the 2026 television market peels back the showroom sticker to reveal the real price
+                of your "home cinema."
             </p>
+
+            <h2>The Paradox of Choice: Giants Efficiency Market</h2>
             <p>
-                Modern LED and OLED televisions are more energy efficient than
-                older plasma models.
+                First, we mapped the market landscape. Who actually owns the shelf space?
+                We analyzed hundreds of models available in retailers across the country to see which manufacturers are
+                flooding the market.
+            </p>
+            <figure>
+                <img src="images/unique%20model%20each%20brand.png"
+                    alt="Bar chart showing the number of unique TV models for each brand"
+                    style="max-width: 60%; height: auto;">
+                <figcaption><strong>Figure 1:</strong> Unique model count per brand. The market is not evenly
+                    distributed.</figcaption>
+            </figure>
+            <p>
+                As Figure 1 reveals, the market is top-heavy. Industry titans like <strong>Samsung</strong>,
+                <strong>Blaupunkt</strong>, and <strong>Ark</strong>
+                dominate the landscape with a staggering array of options.
+                Samsung alone offers a model for nearly every niche—from compact bedroom units to wall-spanning
+                behemoths.
+                While this variety offers consumers unprecedented choice, it creates a potential trap:
+                <em>more models mean more variability in efficiency.</em>
+                Two TVs from the same brand, sitting side-by-side, might look identical but consume vastly different
+                amounts of power depending on their unseen internal tech.
+            </p>
+
+            <h2>The Energy Penalty of "Going Big"</h2>
+            <p>
+                Once you've navigated the brand maze, the next question is size.
+                The trend is undeniable: we want bigger screens. But physics exacts a toll for every extra inch of
+                immersion.
+            </p>
+            <figure>
+                <img src="images/screen%20size%20n%20mode%20power.png"
+                    alt="Scatter plot showing the relationship between screen size and power consumption"
+                    style="max-width: 60%; height: auto;">
+                <figcaption><strong>Figure 2:</strong> Power consumption vs. Screen Size. Notice the steep climb as
+                    screens exceed 65 inches.</figcaption>
+            </figure>
+            <p>
+                Figure 2 visualizes this "Energy Penalty." As you move along the X-axis from reasonable 40-inch screens
+                to the grand 85-inch displays, power consumption doesn't just creep up—it jumps.
+                However, look closer at the scatter plot. Notice the vertical spread at specific sizes (like the 65-inch
+                mark)?
+                That gap represents <strong>opportunity</strong>.
+                It proves that a massive screen <em>doesn't have to be</em> a power hog.
+                By choosing advanced, efficient display panels (often found in newer OLED or Micro-LED ranges), smart
+                shoppers can have their massive screen without the massive bill.
+            </p>
+
+            <h2>Technology Matters: Not All Pixels Are Created Equal</h2>
+            <p>
+                Size isn't the only factor. The underlying technology powering your pixels plays a massive role in your
+                quarterly bill.
+                We compared the power consumption modes of different screen technologies to see which ones are the most
+                efficient.
+            </p>
+            <figure>
+                <img src="images/screen%20tech%20n%20mode%20power.png"
+                    alt="Multi-line chart comparing power consumption of different TV technologies"
+                    style="max-width: 60%; height: auto;">
+                <figcaption><strong>Figure 3:</strong> Screen Technology vs. Power Consumption. Different display types
+                    exhibit vastly different energy profiles.</figcaption>
+            </figure>
+            <p>
+                As seen in Figure 3, the choices you make between LED, OLED, and other display types have distinct
+                energy footprints.
+                Some technologies sip power while others guzzle it, especially at higher brightness settings.
+                Understanding these curves allows you to balance visual fidelity with energy efficiency.
+            </p>
+
+            <h2>The Final Verdict</h2>
+            <p>
+                The data tells a clear story: the "sticker price" is only the deposit. The real cost of ownership is
+                hidden in wattage.
+                Don't just buy the biggest screen that fits your wall. Look for the efficient outliers within those
+                dominant brands.
+                Your electricity bill—and the planet—will thank you for looking beyond the pixels.
             </p>
         </section>
     </main>
